# ml-easy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.ipynb
avs/fail_nff/: recipe.yaml  test.py
avs/fail_nff/profiles/: local.yaml
avs/fail_nff/steps/: ingest.py  register_.py  split.py  train.py  transform.py
inference/: inference.py
postgres_cli/: cli.py
recipe_template/: recipe.yaml  test.py
recipe_template/profiles/: local.yaml
recipe_template/steps/: ingest.py  register_.py  split.py  train.py  transform.py
recipes/: __init__.py  _typing.py  constants.py  enum.py  env_vars.py  exceptions.py  tmp  utils.py
recipes/classification/v1/: __init__.py  config.py  recipe.py  steps.py
recipes/interfaces/: config.py  recipe.py  step.py
recipes/io/: RecipeYAMLoader.py
recipes/recipes/: config.py  recipe.py
recipes/step/: enum.py  step.py
recipes/steps/: cards_config.py  steps_config.py
recipes/steps/evaluate/: evaluate.py  score.py
recipes/steps/ingest/: datasets.py  ingest.py
recipes/steps/register/: ModelRegistry.py  register_.py  registry.py
recipes/steps/register/mlflow_source/: sql_table_dataset_source.py
recipes/steps/split/: split.py  splitter.py
recipes/steps/train/: models.py  train.py
recipes/steps/transform/: filters.py  transform.py  transformer.py
refined_mlflow/recipes/: exceptions.py  utils.py
refined_mlflow/recipes/interfaces/: recipe.py  step.py
refined_mlflow/recipes/io/: RecipeYAMLoader.py
refined_mlflow/recipes/steps/: cards_config.py  steps_config.py
(+12 files in other folders)
