[tool.poetry]
name = "refined-mlflow"
version = "0.1.0"
description = ""
authors = ["jalal <jalalkhaldi3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
jinja2 = "^3.1.4"
mypy = "^1.11.0"
pydantic = "^2.8.2"
polars = "^1.2.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
jupyter = "^1.0.0"
pickledb = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
